# run-on-server

./: README.md  pyproject.toml
run_on_server/: cli.py  client.py  run.py  sync.py  utils.py
tests/: test_client.py  test_run.py  test_sync.py  test_utils.py
