[tool.poetry]
name = "run-on-server"
version = "0.1.0"
description = ""
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
paramiko = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
