[tool.mypy]
python_executable = "$CONDA_PREFIX/bin/python"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_any_unimported = true

[tool.poetry]
name = "run-on-server"
version = "0.1.0"
description = ""
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
paramiko = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
run-on-server = "run_on_server.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
